zkay/examples/type_errors/Functions.zkay
pragma zkay >=0.2.0;

contract Functions {

	address owner;

    function f(uint@owner x) public {
    }

}
